--- a/android/build.gradle
+++ b/android/build.gradle
@@ -48,4 +48,10 @@ allprojects {
         google()
         maven { url 'https://www.jitpack.io' }
     }
+
+     configurations.all {
+        resolutionStrategy {
+            force 'com.facebook.react:react-native:0.70.2'
+        }
+    }
 }
