--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-clipboard/clipboard": "^1.11.1",
+    "@react-native-community/art": "^1.2.0",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
@@ -24,12 +25,17 @@
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-gesture-handler": "^2.7.1",
     "react-native-image-picker": "^4.10.0",
+    "react-native-image-slider-banner": "^1.0.3",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-insta-story": "^1.1.8",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-loader": "^1.3.1",
     "react-native-otp-inputs": "^7.4.0",
+    "react-native-paper": "5.0.0-rc.10",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.4",
     "validatorjs": "^3.22.1"
