--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-insta-story": "^1.1.8",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-loader": "^1.3.1",
+    "react-native-modal": "^13.0.1",
     "react-native-otp-inputs": "^7.4.0",
     "react-native-paper": "5.0.0-rc.10",
     "react-native-responsive-screen": "^1.4.2",
