--- a/package.json
+++ b/package.json
@@ -10,20 +10,32 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/art": "^1.2.0",
+    "@react-native-community/netinfo": "^9.3.6",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^0.26.0",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.2",
     "react-native-animatable": "^1.3.3",
     "react-native-confirmation-code-field": "^7.3.1",
+    "react-native-date-picker": "^4.2.6",
+    "react-native-deck-swiper": "^2.0.12",
+    "react-native-dotenv": "^3.4.2",
+    "react-native-dropdown-picker": "^5.4.3",
+    "react-native-dropdown-select-list": "^2.0.2",
+    "react-native-dropdownalert": "^4.5.1",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-flash-message": "^0.3.1",
     "react-native-gesture-handler": "^2.7.1",
+    "react-native-image-crop-picker": "^0.38.1",
     "react-native-image-picker": "^4.10.0",
     "react-native-image-slider-banner": "^1.0.3",
     "react-native-image-slider-box": "^2.0.7",
@@ -33,12 +45,14 @@
     "react-native-modal": "^13.0.1",
     "react-native-otp-inputs": "^7.4.0",
     "react-native-paper": "5.0.0-rc.10",
+    "react-native-range-slider": "^0.1.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.4",
+    "rn-range-slider": "^2.2.2",
     "validatorjs": "^3.22.1"
   },
   "devDependencies": {
