--- a/package.json
+++ b/package.json
@@ -43,14 +43,18 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-loader": "^1.3.1",
     "react-native-modal": "^13.0.1",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-otp-inputs": "^7.4.0",
     "react-native-paper": "5.0.0-rc.10",
+    "react-native-paystack-webview": "^4.0.3",
     "react-native-range-slider": "^0.1.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-text-carousel": "^0.0.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^11.26.0",
     "react-redux": "^8.0.4",
     "rn-range-slider": "^2.2.2",
     "validatorjs": "^3.22.1"
