--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-clipboard/clipboard": "^1.11.1",
     "@react-native-community/art": "^1.2.0",
+    "@react-native-community/datetimepicker": "^6.7.1",
     "@react-native-community/netinfo": "^9.3.6",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
@@ -21,12 +22,17 @@
     "@react-navigation/stack": "^6.3.2",
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^0.26.0",
+    "deprecated-react-native-prop-types": "^4.0.0",
+    "lottie-react-native": "^5.1.4",
     "moment": "^2.29.4",
+    "patch-package": "^6.5.0",
     "react": "18.1.0",
     "react-native": "0.70.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-animated-loader": "^1.0.0",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-date-picker": "^4.2.6",
+    "react-native-datepicker": "^1.7.2",
     "react-native-deck-swiper": "^2.0.12",
     "react-native-dotenv": "^3.4.2",
     "react-native-dropdown-picker": "^5.4.3",
@@ -43,6 +49,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-loader": "^1.3.1",
     "react-native-modal": "^13.0.1",
+    "react-native-month-year-picker": "^1.9.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-otp-inputs": "^7.4.0",
     "react-native-paper": "5.0.0-rc.10",
