--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -1,13 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<?xml version="1.0" encoding="utf-8" ?>
+<manifest
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+>
 
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+        <!-- Define ACCESS_COARSE_LOCATION if you will use enableHighAccuracy=false  -->
+        <uses-permission
+    android:name="android.permission.ACCESS_COARSE_LOCATION"
+  />
 
     <application
-        android:usesCleartextTraffic="true"
-        tools:targetApi="28"
-        tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false" />
+    android:usesCleartextTraffic="true"
+    tools:targetApi="28"
+    tools:ignore="GoogleAppIndexingWarning"
+  >
+        <activity
+      android:name="com.facebook.react.devsupport.DevSettingsActivity"
+      android:exported="false"
+    />
     </application>
 </manifest>
