--- a/ios/dating/Info.plist
+++ b/ios/dating/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+<key>NSLocationWhenInUseUsageDescription</key>
+<string>This app needs to get your location to get users around around</string>
 <key>UIAppFonts</key>
     <array>
         <string>AntDesign.ttf</string>
