--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-flash-message": "^0.3.1",
     "react-native-gesture-handler": "^2.7.1",
+    "react-native-get-location": "^2.2.1",
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-image-picker": "^4.10.0",
     "react-native-image-slider-banner": "^1.0.3",
@@ -54,6 +55,7 @@
     "react-native-otp-inputs": "^7.4.0",
     "react-native-paper": "5.0.0-rc.10",
     "react-native-paystack-webview": "^4.0.3",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-range-slider": "^0.1.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
