--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/netinfo": "^9.3.6",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/material-top-tabs": "^6.5.3",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
     "@reduxjs/toolkit": "^1.8.6",
@@ -53,6 +54,7 @@
     "react-native-month-year-picker": "^1.9.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-otp-inputs": "^7.4.0",
+    "react-native-pager-view": "^6.1.2",
     "react-native-paper": "5.0.0-rc.10",
     "react-native-paystack-webview": "^4.0.3",
     "react-native-popup-menu": "^0.16.1",
@@ -61,6 +63,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-tab-view": "^3.3.4",
     "react-native-text-carousel": "^0.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.26.0",
